--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
   "dependencies": {
     "@vimeo/player": "^2.16.0",
     "axios": "^0.21.4",
-    "babel-plugin-styled-components": "^1.13.2",
+    "babel-plugin-styled-components": "^2.0.2",
     "bootstrap": "^5.1.0",
-    "gatsby": "^3.13.1",
+    "gatsby": "^4.6.0-next.0",
     "gatsby-plugin-google-tagmanager": "^3.13.0",
-    "gatsby-plugin-image": "^1.11.0",
-    "gatsby-plugin-react-helmet": "^4.12.0",
-    "gatsby-plugin-sass": "^4.11.0",
-    "gatsby-plugin-sharp": "^3.11.0",
-    "gatsby-plugin-sitemap": "^4.7.0",
-    "gatsby-plugin-styled-components": "^4.11.0",
-    "gatsby-plugin-webfonts": "^2.1.1",
-    "gatsby-source-filesystem": "^3.11.0",
+    "gatsby-plugin-image": "^2.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-sass": "^5.4.0",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-plugin-sitemap": "^5.4.0",
+    "gatsby-plugin-styled-components": "^5.4.0",
+    "gatsby-plugin-webfonts": "^2.2.1",
+    "gatsby-source-filesystem": "^4.4.0",
     "gatsby-source-strapi": "^1.0.2",
-    "gatsby-transformer-sharp": "^3.11.0",
-    "node-sass": "^6.0.1",
+    "gatsby-transformer-sharp": "^4.4.0",
+    "sass": "^1.46.0",
     "normalize.css": "^8.0.1",
     "polished": "^4.1.3",
     "react": "^17.0.1",
@@ -40,7 +40,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-responsive": "^9.0.0-beta.3",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.3",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
