--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "serveProduction": "serve ./public"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@vimeo/player": "^2.16.0",
     "axios": "^0.21.4",
     "babel-plugin-styled-components": "^2.0.2",
     "bootstrap": "^5.1.0",
     "gatsby": "^4.6.0-next.0",
+    "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-plugin-google-tagmanager": "^4.8.0",
     "gatsby-plugin-image": "^2.8.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
@@ -32,14 +35,19 @@
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-source-strapi": "^1.0.2",
     "gatsby-transformer-sharp": "^4.4.0",
-    "sass": "^1.46.0",
+    "i": "^0.3.7",
+    "install": "^0.13.0",
     "normalize.css": "^8.0.1",
+    "npm": "^8.5.2",
     "polished": "^4.1.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-markdown": "^8.0.0",
     "react-responsive": "^9.0.0-beta.3",
+    "sass": "^1.46.0",
+    "slugify": "^1.6.5",
     "styled-components": "^5.3.3",
     "uuid": "^3.4.0"
   },
