--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "gatsby-plugin-sitemap": "^5.4.0",
     "gatsby-plugin-styled-components": "^5.4.0",
     "gatsby-plugin-webfonts": "^2.2.1",
+    "gatsby-source-airtable": "^2.3.0",
     "gatsby-source-filesystem": "^4.4.0",
-    "gatsby-source-strapi": "^1.0.2",
     "gatsby-transformer-sharp": "^4.4.0",
     "i": "^0.3.7",
     "install": "^0.13.0",
