--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "gatsby-source-airtable": "^2.3.0",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-transformer-sharp": "^4.4.0",
-    "i": "^0.3.7",
     "install": "^0.13.0",
     "normalize.css": "^8.0.1",
     "npm": "^8.5.2",
@@ -45,6 +44,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-markdown": "^8.0.0",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-responsive": "^9.0.0-beta.3",
     "sass": "^1.46.0",
     "slugify": "^1.6.5",
